Update favicon & metadata

--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,32 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Celeste Photography</title>
+  <title>Celeste Sierra Photography</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="description"
+    content="Editorial wedding and lifestyle photography capturing real emotion, beauty, and timeless elegance across Mexico and beyond.">
+
+  <meta name="keywords"
+    content="wedding photographer Mexico, wedding photographer Guadalajara, destination weddings, Celeste Sierra, lifestyle photography, fine art photography, wedding portraits, bridal photography, editorial photography">
+
+  <meta name="author" content="Celeste Sierra Photography">
+
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://celestesierra.com/">
+  <meta property="og:title" content="Celeste Sierra Photography">
+  <meta property="og:description" content="Editorial wedding photography capturing real emotion and timeless beauty.">
+  <meta property="og:image" content="https://celestesierra.com/assets/og-image.jpg">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://celestesierra.com/">
+  <meta name="twitter:title" content="Celeste Sierra Photography">
+  <meta name="twitter:description" content="Editorial wedding photography capturing real emotion and timeless beauty.">
+  <meta name="twitter:image" content="https://celestesierra.com/assets/og-image.jpg">
+
+  <link rel="canonical" href="https://celestesierra.com/">
+  
+  <link rel="icon" type="image/png" href="assets/my-favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link
